--- a/st%.html
+++ b/st%.html
@@ -50,10 +50,10 @@
             movingDropletImage.src = "qq.png";
 
             fixedDropletImage = new Image();
-            fixedDropletImage.src = "/home/aranya/ets/P^.png";
+            fixedDropletImage.src = "P^.png";
 
             newFixedDropletImage = new Image();
-            newFixedDropletImage.src = "/home/aranya/ets/P%.png";
+            newFixedDropletImage.src = "P%.png";
         }
 
         // Update velocity function
