--- a/st2.html
+++ b/st2.html
@@ -50,7 +50,7 @@
             movingDropletImage.src = "qq.png";
 
             fixedDropletImage = new Image();
-            fixedDropletImage.src = "P#.png";
+            fixedDropletImage.src = "P3.png";
 
             newFixedDropletImage = new Image();
             newFixedDropletImage.src = "P!.png";
