--- a/st6.html
+++ b/st6.html
@@ -50,10 +50,10 @@
             movingDropletImage.src = "qq.png";
 
             fixedDropletImage = new Image();
-            fixedDropletImage.src = "P#.png";
+            fixedDropletImage.src = "P3.png";
 
             newFixedDropletImage = new Image();
-            newFixedDropletImage.src = "P$.png";
+            newFixedDropletImage.src = "P4.png";
         }
 
         // Update velocity function
