--- a/st5.html
+++ b/st5.html
@@ -50,10 +50,10 @@
             movingDropletImage.src = "qq.png";
 
             fixedDropletImage = new Image();
-            fixedDropletImage.src = "P^.png";
+            fixedDropletImage.src = "P6.png";
 
             newFixedDropletImage = new Image();
-            newFixedDropletImage.src = "P%.png";
+            newFixedDropletImage.src = "P5.png";
         }
 
         // Update velocity function
