--- a/st4.html
+++ b/st4.html
@@ -50,10 +50,10 @@
             movingDropletImage.src = "qq.png";
 
             fixedDropletImage = new Image();
-            fixedDropletImage.src = "P$.png";
+            fixedDropletImage.src = "P4.png";
 
             newFixedDropletImage = new Image();
-            newFixedDropletImage.src = "P!.png";
+            newFixedDropletImage.src = "P1.png";
         }
 
         // Update velocity function
