--- a/st1.html
+++ b/st1.html
@@ -53,7 +53,7 @@
             fixedDropletImage.src = "P3.png";
 
             newFixedDropletImage = new Image();
-            newFixedDropletImage.src = "P@.png";
+            newFixedDropletImage.src = "P2.png";
         }
 
         // Update velocity function
